# plasmoid_taskbarpager

./: .gitignore  CMakeLists.txt  README.md  dev.sh  install.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: main.qml
package/contents/ui/config/: configAppearance.qml  configGeneral.qml
package/contents/ui/lib/: NumberBox.qml  ReprLayout.qml  TaskContextMenu.qml  TaskbarBox.qml
plugin/: CMakeLists.txt  backend.cpp  backend.h  launchbackend.cpp  launchbackend.h  pagermodel.cpp  pagermodel.h  windowmodel.cpp  windowmodel.h
